--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,11 @@
 <head>
 	<meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
-  <title>GH 彧康医疗科技有限公司</title>
+  <title>区块链</title>
 </head>
 <body>
   <div id="root" style="height: 100%">
-    <div style="font-size: 24px; text-align: center;">请耐心等待。。。</div>
+    <div style="font-size: 12px;">请耐心等待。。。</div>
   </div>
 </body>
 </html>
